--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="authoring-tool" content="Adobe_Animate_CC" />
-    <title>Untitled-2</title>
+    <title>Sustain Innovation - Flywheel</title>
     <!-- write your code here -->
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-    <script src="Untitled-2.js?1644586314455"></script>
+    <script src="flywheel.js?1644586314455"></script>
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
