--- a/index.html
+++ b/index.html
@@ -7,91 +7,50 @@
 	4. Blank lines will be removed automatically.
 	5. Remove unnecessary comments before creating your template.
 -->
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="authoring-tool" content="Adobe_Animate_CC" />
-    <title>Sustain Innovation - Flywheel</title>
-    <!-- write your code here -->
-    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-    <script src="flywheel.js?1644586314455"></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
-    ></script>
-    <script>
-      var canvas,
-        stage,
-        exportRoot,
-        anim_container,
-        dom_overlay_container,
-        fnStartAnimation;
-      function init() {
-        canvas = document.getElementById("canvas");
-        anim_container = document.getElementById("animation_container");
-        dom_overlay_container = document.getElementById(
-          "dom_overlay_container"
-        );
-        var comp = AdobeAn.getComposition("1392B8D961C3473EADEDBB5D2A770B98");
-        var lib = comp.getLibrary();
-        handleComplete({}, comp);
-      }
-      function handleComplete(evt, comp) {
-        //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
-        var lib = comp.getLibrary();
-        var ss = comp.getSpriteSheet();
-        exportRoot = new lib.Untitled3();
-        stage = new lib.Stage(canvas);
-        //Registers the "tick" event listener.
-        fnStartAnimation = function () {
-          stage.addChild(exportRoot);
-          createjs.Ticker.framerate = lib.properties.fps;
-          createjs.Ticker.addEventListener("tick", stage);
-        };
-        //Code to support hidpi screens and responsive scaling.
-        AdobeAn.makeResponsive(false, "both", false, 1, [
-          canvas,
-          anim_container,
-          dom_overlay_container
-        ]);
-        AdobeAn.compositionLoaded(lib.properties.id);
-        fnStartAnimation();
-      }
-    </script>
-    <!-- write your code here -->
-  </head>
-  <body onload="init();" style="margin: 0px">
-    <div
-      id="animation_container"
-      style="
-        background-color: rgba(255, 255, 255, 1);
-        width: 630px;
-        height: 630px;
-      "
-    >
-      <canvas
-        id="canvas"
-        width="630"
-        height="630"
-        style="
-          position: absolute;
-          display: block;
-          background-color: rgba(255, 255, 255, 1);
-        "
-      ></canvas>
-      <div
-        id="dom_overlay_container"
-        style="
-          pointer-events: none;
-          overflow: hidden;
-          width: 630px;
-          height: 630px;
-          position: absolute;
-          left: 0px;
-          top: 0px;
-          display: block;
-        "
-      ></div>
-    </div>
-  </body>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="authoring-tool" content="Adobe_Animate_CC">
+<title>index</title>
+<!-- write your code here -->
+<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+<script src="index.js"></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js'></script>
+<script>
+var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
+function init() {
+	canvas = document.getElementById("canvas");
+	anim_container = document.getElementById("animation_container");
+	dom_overlay_container = document.getElementById("dom_overlay_container");
+	var comp=AdobeAn.getComposition("1392B8D961C3473EADEDBB5D2A770B98");
+	var lib=comp.getLibrary();
+	handleComplete({},comp);
+}
+function handleComplete(evt,comp) {
+	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
+	var lib=comp.getLibrary();
+	var ss=comp.getSpriteSheet();
+	exportRoot = new lib.flywheel_003();
+	stage = new lib.Stage(canvas);	
+	//Registers the "tick" event listener.
+	fnStartAnimation = function() {
+		stage.addChild(exportRoot);
+		createjs.Ticker.framerate = lib.properties.fps;
+		createjs.Ticker.addEventListener("tick", stage);
+	}	    
+	//Code to support hidpi screens and responsive scaling.
+	AdobeAn.makeResponsive(false,'both',false,1,[canvas,anim_container,dom_overlay_container]);	
+	AdobeAn.compositionLoaded(lib.properties.id);
+	fnStartAnimation();
+}
+</script>
+<!-- write your code here -->
+</head>
+<body onload="init();" style="margin:0px;">
+	<div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00); width:630px; height:630px">
+		<canvas id="canvas" width="630" height="630" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:630px; height:630px; position: absolute; left: 0px; top: 0px; display: block;">
+		</div>
+	</div>
+</body>
 </html>
