--- a/index copy.html
+++ b/index copy.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <meta name="authoring-tool" content="Adobe_Animate_CC" />
 		<link rel="stylesheet" href="styles.css">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:light' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:light' rel='stylesheet' type='text/css'>
     <title>index</title>
     <!-- write your code here -->
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
