--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	4. Blank lines will be removed automatically.
 	5. Remove unnecessary comments before creating your template.
 -->
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="authoring-tool" content="Adobe_Animate_CC" />
