fleash out flywheel orange pie anim

--- a/index copy.html
+++ b/index copy.html
@@ -42,7 +42,7 @@
         //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
         var lib = comp.getLibrary();
         var ss = comp.getSpriteSheet();
-        exportRoot = new lib.flywheel_007();
+        exportRoot = new lib.flywheel_008();
         stage = new lib.Stage(canvas);
         //Registers the "tick" event listener.
         fnStartAnimation = function () {
@@ -69,13 +69,6 @@
     "
   >
 	<div id="flywheel">
-  <div
-    style="
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    "
-  >
     <h1>asdasdadsaz</h1>
 		<div id="description_text_block"><p>	Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p><p>Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p><p>Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p><p> Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p><p> Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci?</p></div>
 		<div id="instructions_text_block">
@@ -92,6 +85,6 @@
         id="dom_overlay_container"
       ></div>
 		</div>
-    </div></div>
+    </div>
   </div>
 </html>
