--- a/index copy.html
+++ b/index copy.html
@@ -69,7 +69,7 @@
     "
   >
 	<div id="flywheel">
-    <h1>asdasdadsaz</h1>
+    <h1>Lorem ipsum dolor sit</h1>
 		<div id="description_text_block"><p>	Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p><p>Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p></div>
 		<div id="instructions_text_block">
 			<header></header>
