--- a/index copy.html
+++ b/index copy.html
@@ -42,7 +42,7 @@
         //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
         var lib = comp.getLibrary();
         var ss = comp.getSpriteSheet();
-        exportRoot = new lib.flywheel_008();
+        exportRoot = new lib.flywheel_app();
         stage = new lib.Stage(canvas);
         //Registers the "tick" event listener.
         fnStartAnimation = function () {
