add json data and link canvas to html doc level js

--- a/index copy.html
+++ b/index copy.html
@@ -21,6 +21,7 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
     ></script>
+		<script src="data.json"></script>
     <script>
       var canvas,
         stage,
@@ -37,6 +38,7 @@
         var comp = AdobeAn.getComposition("1392B8D961C3473EADEDBB5D2A770B98");
         var lib = comp.getLibrary();
         handleComplete({}, comp);
+
       }
       function handleComplete(evt, comp) {
         //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
@@ -59,6 +61,27 @@
         AdobeAn.compositionLoaded(lib.properties.id);
         fnStartAnimation();
       }
+			async function animateArea(areaColor, areaSlice = "start", contentIndex = 0) {
+				var flywheelTitle = document.querySelector("#flywheel > h1:first-child");
+				var flywheelDescription = document.querySelector("#description_text_block");
+				var instructionsHeader = document.querySelector("#instructions_text_block > header");
+				var instructionsContent = document.querySelector("#instructions_text_block > article");
+				var instructionsFooter = document.querySelector("#instructions_text_block > footer");
+				//
+				await fetch('./data.json').then(response => {
+					return response.json();
+				}).then(data => {
+					flywheelTitle.innerHTML = data[0].titles[areaColor]; // set page page title
+					gsap.to(flywheelDescription, {"alpha": 0}); // hide flywheel description
+					gsap.to(flywheelTitle, {alpha: 1, visible: 1}); // show flywheel title
+					instructionsContent.innerHTML = data[0].content[areaColor][areaSlice][contentIndex]; // set instructions content
+					instructionsHeader.style.backgroundColor = data[0].areaColors[areaColor]; // set instructions header color
+				}).catch(err => {
+					// Do something for an error here
+				});
+				//
+				gsap.to("#instructions_text_block", {"delay": 2.5, "right": '0'});
+			}
     </script>
     <!-- write your code here -->
   </head>
@@ -69,8 +92,8 @@
     "
   >
 	<div id="flywheel">
-    <h1>Lorem ipsum dolor sit</h1>
-		<div id="description_text_block"><p>	Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p><p>Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p></div>
+    <h1></h1>
+		<div id="description_text_block"><p>Organisations that sustain innovation use technology as the flywheel that drives innovation in their business. It requires effort to build the flywheel, but once up and running you can continue to sustain innovation by applying small continuous changes (or force) to the flywheel. The resultant force and output becomes magnitudes larger with each incremental push. Explore our recommendations to build your own flywheel.</p></div>
 		<div id="instructions_text_block">
 			<header></header>
 			<article><p>	Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p><p>Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p><p>Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p><p> Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci? Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p><p> Voluptatem ullam, nostrum quo asperiores vitae veniam incidunt tempore atque placeat est maxime tempora culpa fugiat omnis aperiam impedit numquam in adipisci?</p></article>
