--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					// Do something for an error here
 				});
 				//
-				gsap.to("#instructions_text_block", {"delay": 2.5, "right": '0'});
+				gsap.to("#instructions_text_block", {"right": '0'});
 			}
     </script>
     <!-- write your code here -->
