--- a/index_001.html
+++ b/index_001.html
@@ -12,7 +12,9 @@
     <meta charset="UTF-8" />
     <meta name="authoring-tool" content="Adobe_Animate_CC" />
 		<link rel="stylesheet" href="styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:light' rel='stylesheet' type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500;700&display=swap" rel="stylesheet">
     <title>index</title>
     <!-- write your code here -->
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
@@ -28,7 +30,16 @@
         exportRoot,
         anim_container,
         dom_overlay_container,
-        fnStartAnimation;
+        fnStartAnimation,
+        store;
+
+      var flywheelTitle = document.querySelector("#flywheel > h1:first-child");
+      var flywheelDescription = document.querySelector("#description_text_block");
+      var instructionsHeader = document.querySelector("#instructions_panel > header");
+      var instructionsContent = document.querySelector("#instructions_panel > article");
+      var instructionsFooter = document.querySelector("#instructions_panel > footer");
+
+
       function init() {
         canvas = document.getElementById("canvas");
         anim_container = document.getElementById("animation_container");
@@ -38,8 +49,18 @@
         var comp = AdobeAn.getComposition("1392B8D961C3473EADEDBB5D2A770B98");
         var lib = comp.getLibrary();
         handleComplete({}, comp);
-
       }
+
+      async function fetchData() {
+        await fetch('./data.json').then(response => {
+					return response.json();
+				}).then(data => {
+					store = data
+				}).catch(err => {
+					// Do something for an error here
+				});
+      }
+
       function handleComplete(evt, comp) {
         //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
         var lib = comp.getLibrary();
@@ -61,65 +82,29 @@
         AdobeAn.compositionLoaded(lib.properties.id);
         fnStartAnimation();
       }
-			async function animateArea(areaColor, areaSlice = "start", contentIndex = 0) {
-				var flywheelTitle = document.querySelector("#flywheel > h1:first-child");
-				var flywheelDescription = document.querySelector("#description_text_block");
-				var instructionsHeader = document.querySelector("#instructions_panel > header");
-				var instructionsContent = document.querySelector("#instructions_panel > article");
-				var instructionsFooter = document.querySelector("#instructions_panel > footer");
-				//
-				await fetch('./data.json').then(response => {
-					return response.json();
-				}).then(data => {
-          instructionsContent.innerHTML = data[0].content[areaColor][areaSlice][contentIndex].copy; // set instructions content
-          instructionsHeader.style.backgroundColor = data[0].areaColors[areaColor]; // set instructions header color
-          instructionsFooter.innerHTML = `<a href="${data[0].content[areaColor][areaSlice][contentIndex].link}" style="background-color: ${data[0].areaColors[areaColor]}" class="read-more">Read more</a>`; // set footer 
-				}).catch(err => {
-					// Do something for an error here
-				});
-				//
-				gsap.to("#instructions_panel", {"right": '0'});
-			}
-
-			async function setTitleText(areaColor) {
-				var flywheelTitle = document.querySelector("#flywheel > h1:first-child");
-				//
-				await fetch('./data.json').then(response => {
-					return response.json();
-				}).then(data => {
-					flywheelTitle.innerHTML = `<span id="areaBullet" style="background-color: ${data[0].areaColors[areaColor]}"></span>` + data[0].titles[areaColor]; // set page page title
-					toggleTitleDescription();
-				}).catch(err => {
-					// Do something for an error here
-				});
-			}
-
-			function toggleTitleDescription() {
-				var flywheelTitle = document.querySelector("#flywheel > h1:first-child");
-				var flywheelDescription = document.querySelector("#description_text_block");
-				
-				gsap.to(flywheelDescription, {"alpha": 0}); // hide flywheel description
-				gsap.to(flywheelTitle, {alpha: 1}); // show flywheel title
-			}
-
-
-/** 
-
 
 			function animateArea(areaColor, areaSlice = "start", contentIndex = 0) {
-				var flywheelDescription = document.querySelector("#description_text_block");
-				var instructionsHeader = document.querySelector("#instructions_panel > header");
-				var instructionsContent = document.querySelector("#instructions_panel > article");
-				var instructionsFooter = document.querySelector("#instructions_panel > footer");
-
-        instructionsContent.innerHTML = data[0].content[areaColor][areaSlice][contentIndex].copy; // set instructions content
-        instructionsHeader.style.backgroundColor = data[0].areaColors[areaColor]; // set instructions header color
-        instructionsFooter.innerHTML = `<a href="${data[0].content[areaColor][areaSlice][contentIndex].link}">Read More</a>`; // set footer button link
-
-				gsap.to("#instructions_panel", {"right": '0'});
+        flywheelTitle.innerHTML = '<span id="areaBullet"></span> ' + store[0].titles[areaColor]; // set page page title
+        gsap.to(flywheelDescription, {"alpha": 0}); // hide flywheel description
+        gsap.to(flywheelTitle, {alpha: 1}); // show flywheel title
+        instructionsContent.innerHTML = store[0].content[areaColor][areaSlice][contentIndex].copy; // set instructions content
+        instructionsHeader.style.backgroundColor = store[0].areaColors[areaColor]; // set instructions header color
+        instructionsFooter.innerHTML = `<a href="${store[0].content[areaColor][areaSlice][contentIndex].link}" class="read-more">Read more</a>`; // set footer 
 			}
-*/
 
+      function openInstructionsPanel() {
+        gsap.to("#instructions_panel", {"right": '0'});
+      }
+
+      // function setFlyWheelTitle(areaColor) {
+			// 	var flywheelTitle = document.querySelector("#flywheel > h1:first-child");
+      //   flywheelTitle.innerHTML = '<span id="areaBullet"></span> ' + data[0].titles[areaColor]; // set page page title
+      // }
+
+      // function toggleTitleDescription() {
+      //   gsap.to(flywheelDescription, {"alpha": 0}); // hide flywheel description
+      //   gsap.to(flywheelTitle, {alpha: 1}); // show flywheel title
+      // }
     </script>
     <!-- write your code here -->
   </head>
