--- a/index copy.html
+++ b/index copy.html
@@ -12,7 +12,9 @@
     <meta charset="UTF-8" />
     <meta name="authoring-tool" content="Adobe_Animate_CC" />
 		<link rel="stylesheet" href="styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:light' rel='stylesheet' type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;700;900&display=swap" rel="stylesheet">
     <title>index</title>
     <!-- write your code here -->
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
