--- a/index copy.html
+++ b/index copy.html
@@ -77,6 +77,7 @@
 					return response.json();
 				}).then(data => {
           instructionsContent.innerHTML = data[0].content[areaColor][areaSlice][contentIndex].copy; // set instructions content
+          instructionsContent.scrollTop = 0 // scroll to top of content on change
           instructionsHeader.style.backgroundColor = data[0].areaColors[areaColor]; // set instructions header color
           instructionsFooter.innerHTML = `<a href="${data[0].content[areaColor][areaSlice][contentIndex].link}" style="background-color: ${data[0].areaColors[areaColor]}" class="read-more">Read more</a>`; // set footer 
 				}).catch(err => {
